# researcher

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  SPECIFICATION.md  pyproject.toml
.github/: SPEC.md
.github/agents/: researcher-pattern.agent.md
.github/workflows/: ci.yml
output/: evidence.json  paper_benifits_of_exercise_20260506_214825.md  research_benifits_of_exercise_20260506_220258.md
src/: SPEC.md
src/researcher/: SPEC.md  __init__.py  cli.py  config.py  evidence.py  orchestrator.py  paper.py
src/researcher/agents/: SPEC.md  __init__.py  analysis.py  critic.py  decompose.py  extract.py  factcheck.py  outline.py  search.py  section_writer.py  synthesis.py  validation.py
src/researcher/knowledge/: SPEC.md  __init__.py  export.py  gaps.py  graph.py  schema.py
src/researcher/tools/: SPEC.md  ddg_search.py  web_fetch.py
tests/: SPEC.md  test_cli.py  test_evidence.py  test_knowledge.py  test_orchestrator.py  test_validation.py
